renamed a few options, more code cleanup